<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_16">

            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title"
                android:textAppearance="@style/title"/>

            <TextView
                android:id="@+id/home_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_title"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/home_sub_title"
                android:textAppearance="@style/subtitle"/>

            <ImageView
                android:id="@+id/home_image"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/home"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_16">

            <TextView
                android:id="@+id/back_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_title"
                android:textAppearance="@style/title"/>

            <TextView
                android:id="@+id/back_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/back_title"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/back_sub_title"
                android:textAppearance="@style/subtitle"/>

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/back"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_16">

            <TextView
                android:id="@+id/recent_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title"
                android:textAppearance="@style/title"/>

            <TextView
                android:id="@+id/recent_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recent_title"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/home_sub_title"
                android:textAppearance="@style/subtitle"/>

            <ImageView
                android:id="@+id/recent_image"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/recent"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>

