<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.zaot.fullscreengesture.MainActivity"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/main_fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/guideline_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="@{model.tabClick}"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/guideline_icon"
                    android:layout_width="@dimen/tab_icon_size"
                    android:layout_height="@dimen/tab_icon_size"
                    android:src="@drawable/guideline_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tab_text_margin"
                    android:text="@string/tab_guideline"
                    android:textAppearance="@style/tabText"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/instrument_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="@{model.tabClick}"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/instrument_icon"
                    android:layout_width="@dimen/tab_icon_size"
                    android:layout_height="@dimen/tab_icon_size"
                    android:src="@drawable/instrument_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tab_text_margin"
                    android:text="@string/tab_instrument"
                    android:textAppearance="@style/tabText"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:onClick="@{model.tabClick}"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/about_icon"
                    android:layout_width="@dimen/tab_icon_size"
                    android:layout_height="@dimen/tab_icon_size"
                    android:src="@drawable/about_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tab_text_margin"
                    android:text="@string/tab_about"
                    android:textAppearance="@style/tabText"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>
